# AMP808

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  ROADMAP.md  release-plz.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: ci.yml  pages.yml  release-dry-run.yml  release.yml
adr/: 0001-adopt-architecture-decision-records.md  0002-use-cpal-direct-for-audio-output.md  0003-symphonia-decode-with-ffmpeg-fallback.md  0004-tokio-async-with-cpal-audio-thread.md  0005-two-phase-ytdlp-resolution.md  0006-http-streaming-with-icy-metadata.md  0007-provider-trait-for-external-music-services.md  0008-album-art-display-via-ratatui-image.md  0009-oscilloscope-visualizer-mode.md  0010-tachyonfx-animated-808-chrome-and-visualizer-parity.md  0011-in-app-command-mode-for-runtime-playlist-loading.md  0012-add-macos-music-app-playback-backend.md  0013-use-apple-music-api-as-a-metadata-only-integration.md  0014-pause-apple-music-api-rollout-and-use-synthetic-visualizers.md  0015-add-bpm-analysis-and-display.md  0016-add-ratzilla-web-808-player-target.md  0016-expanded-multi-pane-ui-mode.md  0018-add-web-audio-eq-control-graph.md  0019-web-external-provider-and-ffmpeg-wasm-boundary.md  README.md
apps/web/: Cargo.toml  Trunk.toml  index.html
apps/web/src/: main.rs
crates/amp808-core/: Cargo.toml
crates/amp808-core/src/: lib.rs  web_audio.rs
docs/: cliamp-main-new-discovery.md  ratzilla-web-808-roadmap.md
docs/superpowers/plans/: 2026-06-18-ratzilla-web-808-first-slice.md  2026-06-19-ratzilla-808-v2-hardware-accuracy.md
docs/superpowers/specs/: 2026-06-19-ratzilla-808-v2-hardware-audio-design.md
scripts/: check-release-gate.sh  install-macos.sh
src/: app_paths.rs  cli.rs  config.rs  main.rs  playback_backend.rs
src/player/: decode.rs  eq.rs  ffmpeg.rs  gapless.rs  http.rs  icy.rs  mod.rs  source.rs  stream.rs  tap.rs  volume.rs
src/playlist/: mod.rs
src/resolve/: mod.rs  ytdl.rs
src/ui/: bpm.rs  command.rs  eq_presets.rs  explorer.rs  keys.rs  mod.rs  scotland_flag.rs  styles.rs  theme.rs  view.rs  view_808.rs  view_expanded.rs  view_mode.rs  visualizer.rs
tests/fixtures/apple_music/: library_playlist_tracks.json  library_playlists.json
