[package]
name = "amp808_web"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
amp808-core = { path = "../../crates/amp808-core" }
ratzilla = "0.3.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "HtmlInputElement",
    "Url",
    "Blob",
    "File",
    "FileList",
    "AudioContext",
    "MediaElementAudioSourceNode",
    "AnalyserNode",
    "AudioNode",
    "AudioDestinationNode",
    "DomException",
    "Event",
    "console",
] }
