[package]
name = "amp808_web"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
amp808-core = { path = "../../crates/amp808-core" }
critical-section = { version = "1.2", features = ["std"] }
ratzilla = "0.3.1"
tachyonfx = "0.25"
tui-big-text = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "DomRect",
    "DataTransfer",
    "DragEvent",
    "Element",
    "EventTarget",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "MouseEvent",
    "MediaError",
    "Node",
    "Url",
    "Blob",
    "File",
    "FileList",
    "AudioContext",
    "MediaElementAudioSourceNode",
    "AnalyserNode",
    "AudioParam",
    "AudioNode",
    "AudioDestinationNode",
    "BiquadFilterNode",
    "BiquadFilterType",
    "GainNode",
    "Storage",
    "DomException",
    "Event",
    "console",
] }
